/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "TouchConfigData.proto";

package aasdk.proto.data;

message InputChannel {
  repeated uint32 supported_keycodes = 1;
  optional TouchConfig touch_screen_config = 2;
  optional TouchConfig touch_pad_config = 3;
}
