/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message InputChannelMessage {
  enum Enum {
    NONE = 0x0000;
    INPUT_EVENT_INDICATION = 0x8001;
    BINDING_REQUEST = 0x8002;
    BINDING_RESPONSE = 0x8003;
  }
}
